--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "got-2026",
+  "name": "game-of-throne-2026",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,25 +7,31 @@
     "build": "next build",
     "start": "next start",
     "format": "prettier --write .",
-    "lint": "prettier --check ."
+    "lint": "eslint"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.9.0",
-    "@supabase/ssr": "^0.2.0",
-    "@supabase/supabase-js": "^2.42.0",
-    "next": "14",
-    "react": "^18",
-    "react-dom": "^18",
-    "zustand": "^5.0.3"
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.87.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.560.0",
+    "next": "16.0.8",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "lint-staged": "^15.4.3",
-    "postcss": "^8",
-    "prettier": "^3.4.2",
-    "tailwindcss": "^3.4.1",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "1.0.0",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.8",
+    "prettier": "3.7.4",
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
