--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
+    "html-react-parser": "^5.2.10",
     "lucide-react": "^0.560.0",
     "next": "16.0.8",
     "react": "19.2.1",
