--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ejs": "^3.1.10",
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
     "html-react-parser": "^5.2.10",
     "lucide-react": "^0.560.0",
     "next": "16.0.8",
+    "nodemailer": "^7.0.12",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
@@ -41,7 +43,9 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/ejs": "^3.1.5",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
