--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
     "html-react-parser": "^5.2.10",
+    "lenis": "^1.3.16",
     "lucide-react": "^0.560.0",
     "next": "16.0.8",
     "nodemailer": "^7.0.12",
